    + new classic functions available to shift words : SHL() & SHR() & ROL() & ROR() with system %S8 for out bit (thanks
      to Franco Sabbaini for the first modifications).
    + no more segmentation fault in case of divide per zero (also reported by Franco Sabbaini) : instead return 0, set
      system %S7, and red backgroud for the first rung where the error occured (a little easier to found where...) !
      New rung error number info (for red background drawing) also added in protocol monitor exchange.
   - New variables browser window available. To see all available variables, and easily select a variable instead of manual
     typing. Used for free vars window, and in properties window for variables and arithmetic expressions.
   - If editor window closed, and "modifying" from popup menu, was opening editor window without checking menu "View / Editor window". fixed.
     + now also open editor window when adding or inserting a rung.

v0.9.114 (..... 2021)
   - When opening the variables browser, if already a var is present in the edit widget, display the corresponding combo type
     and select it per default in the list.
     + can double-click on a var in the list to validate variable selected (instead of clicking "OK" button, faster!).
   - When opening the variables browser for "variable" properties, if string actually ending with '[' character, add variable selected
     instead of replacing it (usefull to add a second index variable between [ ]).
   - At first startup (no ".classicladder_prefs" file in home), booleans & free vars windows are opened, but abnormally not checked in
     the view menu ! And also always opened at startup even if closed when quitting. Fixed.
   - To avoid (justified) warnings with new gcc version, replace '400' value constant per LGT_FOR_PATH_AND_FILE define + some mallocs done.
   - Remove some warnings with gcc 64 bits compilation (till now, always in 32 bits...). Use of GINT_TO_POINTER() & GPOINTER_TO_INT() macros.
