@@ -70,14 +70,15 @@ endif
 OWN_LIBS += -lz
 
 #GTK2 or GTK3 choice (exclusive!!!)
-#Default (under Linux) GTK2 Version
+#----------------------------------
+#===For GTK2 Version===
 ifdef GTK_INTERFACE
 #OWN_CFLAGS += -Wall `pkg-config gtk+-2.0 --cflags` `pkg-config pango --cflags` `pkg-config gthread-2.0 --cflags` -DGTK_INTERFACE
 #OWN_LIBS += `pkg-config gtk+-2.0 --cflags --libs` `pkg-config pango --cflags --libs` `pkg-config gthread-2.0 --cflags --libs`
 ###Flags that can added to see warnings for future GTK3...
 ###OWN_CFLAGS += -DGSEAL_ENABLE
 endif
-#For GTK3 Version
+#===For GTK3 Version===
 ifdef GTK_INTERFACE
 OWN_CFLAGS += -Wall `pkg-config gtk+-3.0 --cflags` `pkg-config pango --cflags` -DGTK_INTERFACE
 OWN_LIBS += `pkg-config gtk+-3.0 --cflags --libs` `pkg-config pango --cflags --libs`
